<resources>
    <string name="app_name">GrocerE</string>

    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>

    <string name="button_submitprice">Submit a Price</string>
    <string name="button_requestprice">Request a Price</string>
    <string name="button_changestores">Change Store Preferences</string>
    <string name="button_close">Close Application</string>
    <string name="button_submit">Submit</string>
    <string name="button_request">Request</string>
    <string name="button_save">Save</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_submit_price">Submit Price</string>
    <string name="title_activity_request_price">Request Price</string>
    <string name="title_activity_change_stores">Store Preferences</string>

    <string name="item_name">Item:  </string>
    <string name="item_quantity">Quantity:  </string>
    <string name="item_purchased">Date Purchased:  </string>
    <string name="item_store">Store:  </string>
    <string name="item_price">Item Price:  </string>

    <string name="name_message">Enter the item name</string>
    <string name="quantity_message">Enter the amount purchased</string>
    <string name="date_message">Enter the purchase date</string>
    <string name="store_message">Enter the store name</string>
    <string name="price_message">Enter the price paid</string>

    <string name="store1">Giant Eagle</string>
    <string name="store2">Trader Joe\'s</string>
    <string name="store3">Shop-n-Save</string>
    <string name="store4">Aldi</string>

    <string-array name="store_array">
        <item>Choose a store</item>
    </string-array>

</resources>
