<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.team7_18842cmu.activities.SubmitPrice"
    android:background="@color/silver">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_name"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_quantity"
        android:id="@+id/textView2"
        android:textColor="@android:color/white"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_store"
        android:id="@+id/textView3"
        android:textColor="@android:color/white"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_price"
        android:id="@+id/textView4"
        android:textColor="@android:color/white"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_purchased"
        android:id="@+id/textView5"
        android:textColor="@android:color/white"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"
        android:hint="@string/date_message"
        android:onClick="showDatePicker"
        android:layout_below="@+id/textView5"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/textView5"
        android:clickable="true" />

    <EditText
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:id="@+id/editText1"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"
        android:hint="@string/name_message"
        android:lines="1"
        android:imeOptions="actionNext" />

    <EditText
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:id="@+id/editText2"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/darker_gray"
        android:autoText="false"
        android:lines="1"
        android:hint="@string/quantity_message"
        android:imeOptions="actionNext" />

    <EditText
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:id="@+id/editText3"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"
        android:hint="@string/price_message"
        android:lines="1"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext" />

    <EditText
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:id="@+id/editText4"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/darker_gray"
        android:autoText="false"
        android:lines="1"
        android:hint="@string/store_message"
        android:imeOptions="actionNext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:id="@+id/submitbutton"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#ff00ff00"
        android:theme="@style/Base.TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@android:color/black" />

</RelativeLayout>
